Fixup button spacing by menu .nametags-left { right: 70px; }

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -22,7 +22,6 @@
 .menu-dropdown a {
   background-color: #28130f;
   color: lightblue;
-  font-weight: bold;
   font-size: large;
 }
 .menu-dropdown a:hover
